--- a/index.html
+++ b/index.html
@@ -1,60 +1,65 @@
-<!doctype html>
-loading = true;
-const next = items.slice(cursor, cursor + CONFIG.BATCH);
-cursor += next.length;
-if (!next.length) { loading = false; return; }
-// we’re not fetching metadata here; just render
-next.forEach(addCard);
-loading = false;
-}
-
-
-function addCard(item){
-const card = document.createElement('article');
-card.className = 'card';
-const media = document.createElement('div');
-media.className = 'media';
-
-
-if (item.poster){
-const img = document.createElement('img');
-img.src = item.poster; media.appendChild(img);
-}
-
-
-const info = document.createElement('div');
-info.className = 'info';
-info.textContent = item.title || filename(item.src);
-
-
-card.appendChild(media); card.appendChild(info); grid.appendChild(card);
-card.dataset.src = item.src; card.dataset.poster = item.poster || '';
-io.observe(card);
-}
-
-
-const io = new IntersectionObserver((entries) => {
-for (const e of entries){ if (!e.isIntersecting) continue; io.unobserve(e.target); mountVideo(e.target); }
-}, { rootMargin: '1200px 0px' });
-
-
-function mountVideo(card){
-const media = card.querySelector('.media');
-const v = document.createElement('video');
-v.setAttribute('playsinline',''); v.setAttribute('preload','none'); v.controls = true;
-if (CONFIG.AUTOPLAY) v.autoplay = true; if (CONFIG.MUTED) v.muted = true;
-const src = document.createElement('source'); src.src = card.dataset.src; src.type = 'video/mp4';
-v.appendChild(src); media.innerHTML = ''; media.appendChild(v);
-}
-
-
-window.addEventListener('scroll', () => {
-const nearBottom = window.innerHeight + window.scrollY > document.body.offsetHeight - 1600;
-if (nearBottom) enqueue();
-});
-
-
-function filename(p){ try{ return decodeURIComponent(p.split('/').pop()); } catch{ return p; } }
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Grok Imagine Videos Showcase</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: system-ui, sans-serif; background: #000; color: #fff; }
+    header { text-align: center; padding: 2rem; }
+    header h1 { font-size: clamp(2rem, 5vw, 4rem); margin-bottom: 0.5rem; }
+    header p { opacity: 0.8; }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      gap: 1.5rem;
+      padding: 2rem;
+      max-width: 1400px;
+      margin: 0 auto;
+    }
+    .video-card {
+      position: relative;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 8px 32px rgba(255,255,255,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .video-card:hover {
+      transform: scale(1.02);
+      box-shadow: 0 16px 48px rgba(255,255,255,0.2);
+    }
+    video {
+      width: 100%;
+      height: 0;
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
+      object-fit: cover;
+      display: block;
+    }
+    video::cue { /* Stylish controls if needed */ }
+    @media (max-width: 768px) {
+      .gallery { grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); padding: 1rem; }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>🚀 My Grok Imagine Videos</h1>
+    <p>AI-powered clips generated with <a href="https://grok.com/imagine" style="color:#1d9bf0;">Grok Imagine</a></p>
+  </header>
+  <section class="gallery">
+    <!-- Add your videos here - copy-paste blocks -->
+    <div class="video-card">
+      <video controls preload="metadata" loading="lazy" poster="images/video1-poster.jpg" loop muted>
+        <source src="videos/video1.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="video-card">
+      <video controls preload="metadata" loading="lazy" poster="images/video2-poster.jpg" loop muted>
+        <source src="videos/video2.mp4" type="video/mp4">
+      </video>
+    </div>
+    <!-- Repeat for more: Duplicate <div class="video-card"> blocks -->
+  </section>
 </body>
 </html>
