--- a/index.html
+++ b/index.html
@@ -3,63 +3,133 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Grok Imagine Videos Showcase</title>
+  <title>My 12 Grok Imagine Videos</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: system-ui, sans-serif; background: #000; color: #fff; }
-    header { text-align: center; padding: 2rem; }
-    header h1 { font-size: clamp(2rem, 5vw, 4rem); margin-bottom: 0.5rem; }
-    header p { opacity: 0.8; }
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body { background:#000; font-family:system-ui,sans-serif; }
+    header { text-align:center; padding:2rem; color:#fff; }
+    header h1 { font-size:clamp(2rem,5vw,3.5rem); margin-bottom:.5rem; }
+    header p { opacity:.7; font-size:0.9rem; }
+
     .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-      gap: 1.5rem;
-      padding: 2rem;
-      max-width: 1400px;
-      margin: 0 auto;
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
+      gap:1rem;
+      padding:1rem;
+      max-width:1600px;
+      margin:0 auto;
     }
     .video-card {
-      position: relative;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 8px 32px rgba(255,255,255,0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .video-card:hover {
-      transform: scale(1.02);
-      box-shadow: 0 16px 48px rgba(255,255,255,0.2);
+      border-radius:12px;
+      overflow:hidden;
+      box-shadow:0 4px 16px rgba(255,255,255,0.05);
     }
     video {
-      width: 100%;
-      height: 0;
-      padding-bottom: 56.25%; /* 16:9 aspect ratio */
-      object-fit: cover;
-      display: block;
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      display:block;
+      aspect-ratio:16/9;
+      background:#111;
     }
-    video::cue { /* Stylish controls if needed */ }
-    @media (max-width: 768px) {
-      .gallery { grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); padding: 1rem; }
+    @media (max-width:600px) {
+      .gallery { gap:0.5rem; padding:0.5rem; }
     }
   </style>
 </head>
 <body>
+
   <header>
-    <h1>🚀 My Grok Imagine Videos</h1>
-    <p>AI-powered clips generated with <a href="https://grok.com/imagine" style="color:#1d9bf0;">Grok Imagine</a></p>
+    <h1>My Grok Imagine Videos</h1>
+    <p>12 AI-generated clips · Auto-playing · Made with Grok</p>
   </header>
+
   <section class="gallery">
-    <!-- Add your videos here - copy-paste blocks -->
+
+    <!-- VIDEO 1 -->
     <div class="video-card">
-      <video controls preload="metadata" loading="lazy" poster="images/video1-poster.jpg" loop muted>
+      <video autoplay muted loop preload="auto" playsinline>
         <source src="videos/video1.mp4" type="video/mp4">
       </video>
     </div>
+
+    <!-- VIDEO 2 -->
     <div class="video-card">
-      <video controls preload="metadata" loading="lazy" poster="images/video2-poster.jpg" loop muted>
+      <video autoplay muted loop preload="auto" playsinline>
         <source src="videos/video2.mp4" type="video/mp4">
       </video>
     </div>
-    <!-- Repeat for more: Duplicate <div class="video-card"> blocks -->
+
+    <!-- VIDEO 3 -->
+    <div class="video-card">
+      <video autoplay muted loop preload="auto" playsinline>
+        <source src="videos/video3.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <!-- VIDEO 4 -->
+    <div class="video-card">
+      <video autoplay muted loop preload="auto" playsinline>
+        <source src="videos/video4.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <!-- VIDEO 5 -->
+    <div class="video-card">
+      <video autoplay muted loop preload="auto" playsinline>
+        <source src="videos/video5.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <!-- VIDEO 6 -->
+    <div class="video-card">
+      <video autoplay muted loop preload="auto" playsinline>
+        <source src="videos/video6.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <!-- VIDEO 7 -->
+    <div class="video-card">
+      <video autoplay muted loop preload="auto" playsinline>
+        <source src="videos/video7.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <!-- VIDEO 8 -->
+    <div class="video-card">
+      <video autoplay muted loop preload="auto" playsinline>
+        <source src="videos/video8.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <!-- VIDEO 9 -->
+    <div class="video-card">
+      <video autoplay muted loop preload="auto" playsinline>
+        <source src="videos/video9.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <!-- VIDEO 10 -->
+    <div class="video-card">
+      <video autoplay muted loop preload="auto" playsinline>
+        <source src="videos/video10.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <!-- VIDEO 11 -->
+    <div class="video-card">
+      <video autoplay muted loop preload="auto" playsinline>
+        <source src="videos/video11.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <!-- VIDEO 12 -->
+    <div class="video-card">
+      <video autoplay muted loop preload="auto" playsinline>
+        <source src="videos/video12.mp4" type="video/mp4">
+      </video>
+    </div>
+
   </section>
 </body>
 </html>
