--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     .gallery {
       display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns:repeat(auto-fit, minmax(280px, 1fr)); /* Wider min for portrait */
       gap:1rem;
       padding:1rem;
-      max-width:1600px;
+      max-width:1400px;
       margin:0 auto;
     }
     .video-card {
@@ -26,14 +26,14 @@
     }
     video {
       width:100%;
-      height:100%;
+      height:0;
+      padding-bottom:177.78%; /* 9:16 portrait ratio (100% * 16/9) */
       object-fit:cover;
       display:block;
-      aspect-ratio:16/9;
       background:#111;
     }
     @media (max-width:600px) {
-      .gallery { gap:0.5rem; padding:0.5rem; }
+      .gallery { gap:0.5rem; padding:0.5rem; grid-template-columns:1fr; } /* Single column on mobile */
     }
   </style>
 </head>
@@ -41,7 +41,7 @@
 
   <header>
     <h1>My Grok Imagine Videos</h1>
-    <p>12 AI-generated clips · Auto-playing · Made with Grok</p>
+    <p>12 Portrait AI Clips (9:16) · Auto-Looping · Powered by Grok</p>
   </header>
 
   <section class="gallery">
@@ -105,14 +105,14 @@
     <!-- VIDEO 9 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="videos/video9.mp4" type="video/mp4">
+        <source src="grok-video-ce1e4ffe-587b-4430-a7eb-b483be5b3967.mp4" type="video/mp4">
       </video>
     </div>
 
     <!-- VIDEO 10 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="videos/video10.mp4" type="video/mp4">
+        <source src="grok-video-84a1673c-2953-4d7a-b1d3-91b17f1ff7c0.mp4" type="video/mp4">
       </video>
     </div>
 
@@ -131,5 +131,33 @@
     </div>
 
   </section>
+
+  <script>
+    // Force autoplay on load, visibility, or scroll (browser policy workaround)
+    document.addEventListener('DOMContentLoaded', function() {
+      const videos = document.querySelectorAll('video');
+      videos.forEach(video => {
+        const playVideo = () => {
+          video.play().catch(e => console.log('Autoplay blocked:', e)); // Silent fail
+        };
+        playVideo(); // Try on load
+        video.addEventListener('loadedmetadata', playVideo);
+        document.addEventListener('scroll', playVideo, { once: true }); // Try on first scroll
+        // Intersection Observer for lazy-loaded videos
+        if (IntersectionObserver) {
+          const observer = new IntersectionObserver(entries => {
+            entries.forEach(entry => {
+              if (entry.isIntersecting) {
+                entry.target.play().catch(e => {});
+                observer.unobserve(entry.target);
+              }
+            });
+          });
+          observer.observe(video);
+        }
+      });
+    });
+  </script>
+
 </body>
 </html>
