Update for video folder source

--- a/index.html
+++ b/index.html
@@ -49,77 +49,77 @@
     <!-- VIDEO 1 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="grok-video-fa22a5af-cdcf-4c31-8b56-3bc8cc3bf43d.mp44" type="video/mp4">
+        <source src="videos/grok-video-fa22a5af-cdcf-4c31-8b56-3bc8cc3bf43d.mp44" type="video/mp4">
       </video>
     </div>
 
     <!-- VIDEO 2 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="grok-video-4e398da6-c4be-4aba-b028-c391a5b08990.mp4" type="video/mp4">
+        <source src="videos/grok-video-4e398da6-c4be-4aba-b028-c391a5b08990.mp4" type="video/mp4">
       </video>
     </div>
 
     <!-- VIDEO 3 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="grok-video-d34887ea-b3ec-473b-a6c3-eebc1d9349c1.mp4" type="video/mp4">
+        <source src="videos/grok-video-d34887ea-b3ec-473b-a6c3-eebc1d9349c1.mp4" type="video/mp4">
       </video>
     </div>
 
     <!-- VIDEO 4 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="grok-video-8d0a6b79-d7f4-47d8-bcbd-ef2a80550bd6.mp4" type="video/mp4">
+        <source src="videos/grok-video-8d0a6b79-d7f4-47d8-bcbd-ef2a80550bd6.mp4" type="video/mp4">
       </video>
     </div>
 
     <!-- VIDEO 5 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="grok-video-d743a6ad-1f23-4dde-9fed-a915392b09c2.mp4" type="video/mp4">
+        <source src="videos/grok-video-d743a6ad-1f23-4dde-9fed-a915392b09c2.mp4" type="video/mp4">
       </video>
     </div>
 
     <!-- VIDEO 6 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="grok-video-8e9bd627-7797-4321-8c8d-ed1430914230.mp4" type="video/mp4">
+        <source src="videos/grok-video-8e9bd627-7797-4321-8c8d-ed1430914230.mp4" type="video/mp4">
       </video>
     </div>
 
     <!-- VIDEO 7 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="grok-video-d3e75c66-46f5-4475-b569-cc97477f1670.mp4" type="video/mp4">
+        <source src="videos/grok-video-d3e75c66-46f5-4475-b569-cc97477f1670.mp4" type="video/mp4">
       </video>
     </div>
 
     <!-- VIDEO 8 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="grok-video-48f7a41f-8838-4136-bdfa-ae39938c186f.mp4" type="video/mp4">
+        <source src="videos/grok-video-48f7a41f-8838-4136-bdfa-ae39938c186f.mp4" type="video/mp4">
       </video>
     </div>
 
     <!-- VIDEO 9 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="grok-video-ce1e4ffe-587b-4430-a7eb-b483be5b3967.mp4" type="video/mp4">
+        <source src="videos/grok-video-ce1e4ffe-587b-4430-a7eb-b483be5b3967.mp4" type="video/mp4">
       </video>
     </div>
 
     <!-- VIDEO 10 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="grok-video-84a1673c-2953-4d7a-b1d3-91b17f1ff7c0.mp4" type="video/mp4">
+        <source src="videos/grok-video-84a1673c-2953-4d7a-b1d3-91b17f1ff7c0.mp4" type="video/mp4">
       </video>
     </div>
 
     <!-- VIDEO 11 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="videos/video11.mp4" type="video/mp4">
+        <source src="video11.mp4" type="video/mp4">
       </video>
     </div>
 
