--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My 12 Grok Imagine Videos</title>
+  <title>Grok Videos</title>
   <style>
     * { margin:0; padding:0; box-sizing:border-box; }
     body { background:#000; font-family:system-ui,sans-serif; }
-    header { text-align:center; padding:2rem; color:#fff; }
-    header h1 { font-size:clamp(2rem,5vw,3.5rem); margin-bottom:.5rem; }
-    header p { opacity:.7; font-size:0.9rem; }
-
     .gallery {
       display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(280px, 1fr)); /* Wider min for portrait */
+      grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));
       gap:1rem;
       padding:1rem;
       max-width:1400px;
@@ -22,29 +18,37 @@
     .video-card {
       border-radius:12px;
       overflow:hidden;
-      box-shadow:0 4px 16px rgba(255,255,255,0.05);
+      position:relative;
     }
     video {
       width:100%;
       height:0;
-      padding-bottom:177.78%; /* 9:16 portrait ratio (100% * 16/9) */
+      padding-bottom:177.78%; /* 9:16 */
       object-fit:cover;
       display:block;
       background:#111;
     }
-    @media (max-width:600px) {
-      .gallery { gap:0.5rem; padding:0.5rem; grid-template-columns:1fr; } /* Single column on mobile */
+    .play-overlay {
+      position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);
+      background:rgba(0,0,0,0.7); color:white; padding:1rem; border-radius:8px;
+      font-size:0.9rem; cursor:pointer; display:none;
     }
+    @media (max-width:600px) { .gallery { grid-template-columns:1fr; } }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>My Grok Imagine Videos</h1>
-    <p>12 Portrait AI Clips (9:16) · Auto-Looping · Powered by Grok</p>
-  </header>
-
   <section class="gallery">
+
+    <!-- DEBUG: Only this one has fallback text -->
+    <div class="video-card">
+      <video autoplay muted loop playsinline preload="metadata">
+        <source src="videos/video1.mp4" type="video/mp4">
+        <p style="color:red; padding:1rem; text-align:center; background:#111;">
+          FAILED: videos/video1.mp4 not found or corrupted
+        </p>
+      </video>
+    </div>
 
     <!-- VIDEO 1 -->
     <div class="video-card">
@@ -116,12 +120,16 @@
       </video>
     </div>
 
-    <!-- VIDEO 11 -->
-    <div class="video-card">
-      <video autoplay muted loop preload="auto" playsinline>
-        <source src="video11.mp4" type="video/mp4">
-      </video>
-    </div>
+    <!-- DEBUG VIDEO 1 -->
+<div class="video-card">
+  <video id="debug-video" autoplay muted loop preload="metadata" playsinline>
+    <source src="videos/video1.mp4" type="video/mp4">
+    <p style="color:red; padding:1rem; text-align:center;">
+      VIDEO FAILED TO LOAD<br>
+      Check: <code>videos/video1.mp4</code> exists?
+    </p>
+  </video>
+</div>
 
     <!-- VIDEO 12 -->
     <div class="video-card">
@@ -132,28 +140,44 @@
 
   </section>
 
-  <script>
-    // Force autoplay on load, visibility, or scroll (browser policy workaround)
-    document.addEventListener('DOMContentLoaded', function() {
+ <script>
+    document.addEventListener('DOMContentLoaded', () => {
       const videos = document.querySelectorAll('video');
-      videos.forEach(video => {
-        const playVideo = () => {
-          video.play().catch(e => console.log('Autoplay blocked:', e)); // Silent fail
-        };
-        playVideo(); // Try on load
-        video.addEventListener('loadedmetadata', playVideo);
-        document.addEventListener('scroll', playVideo, { once: true }); // Try on first scroll
-        // Intersection Observer for lazy-loaded videos
-        if (IntersectionObserver) {
-          const observer = new IntersectionObserver(entries => {
-            entries.forEach(entry => {
-              if (entry.isIntersecting) {
-                entry.target.play().catch(e => {});
-                observer.unobserve(entry.target);
-              }
-            });
+      videos.forEach((video, i) => {
+        video.addEventListener('error', (e) => {
+          console.error(`Video ${i+1} load error:`, e.target.error);
+          console.log('Tried to load:', e.target.currentSrc);
+        });
+
+        const tryPlay = () => {
+          video.play().catch(err => {
+            console.warn(`Autoplay blocked (video ${i+1}):`, err.message);
+            // Show overlay to unlock
+            let overlay = video.parentElement.querySelector('.play-overlay');
+            if (!overlay) {
+              overlay = document.createElement('div');
+              overlay.className = 'play-overlay';
+              overlay.innerHTML = 'Tap to Play';
+              overlay.onclick = () => { video.play(); overlay.remove(); };
+              video.parentElement.appendChild(overlay);
+            }
+            overlay.style.display = 'block';
           });
-          observer.observe(video);
+        };
+
+        // Try immediately
+        tryPlay();
+
+        // Retry on interaction
+        ['click', 'touchstart', 'keydown'].forEach(ev =>
+          document.addEventListener(ev, tryPlay, { once: true })
+        );
+
+        // Retry when in view
+        if ('IntersectionObserver' in window) {
+          new IntersectionObserver((entries) => {
+            if (entries[0].isIntersecting) tryPlay();
+          }).observe(video);
         }
       });
     });
