--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <!-- DEBUG: Only this one has fallback text -->
     <div class="video-card">
       <video autoplay muted loop playsinline preload="metadata">
-        <source src="videos/video1.mp4" type="video/mp4">
+        <source src="ideos/grok-video-fa22a5af-cdcf-4c31-8b56-3bc8cc3bf43d.mp4" type="video/mp4">
         <p style="color:red; padding:1rem; text-align:center; background:#111;">
-          FAILED: videos/video1.mp4 not found or corrupted
+          FAILED: ideos/grok-video-fa22a5af-cdcf-4c31-8b56-3bc8cc3bf43d.mp4 not found or corrupted
         </p>
       </video>
     </div>
@@ -53,7 +53,7 @@
     <!-- VIDEO 1 -->
     <div class="video-card">
       <video autoplay muted loop preload="auto" playsinline>
-        <source src="videos/grok-video-fa22a5af-cdcf-4c31-8b56-3bc8cc3bf43d.mp44" type="video/mp4">
+        <source src="videos/grok-video-fa22a5af-cdcf-4c31-8b56-3bc8cc3bf43d.mp4" type="video/mp4">
       </video>
     </div>
 
