--- a/index.html
+++ b/index.html
@@ -63,7 +63,18 @@
       'videos/grok-video-48f7a41f-8838-4136-bdfa-ae39938c186f.mp4',
       'videos/grok-video-ce1e4ffe-587b-4430-a7eb-b483be5b3967.mp4',
       'videos/grok-video-84a1673c-2953-4d7a-b1d3-91b17f1ff7c0.mp4',
-      'videos/video12.mp4'
+      'videos/grok-video-c598477e-f62a-472d-a02c-a0a364362e3e.mp4',
+      'videos/grok-video-88c4cd17-387b-47b3-8c9c-e2fb28d04ffe.mp4',
+      'videos/grok-video-c4bc7aa1-b1cc-4f07-aeb6-240b3c677ba1.mp4',
+      'videos/grok-video-208d5ddc-06f9-4ac6-bb62-4266269b4136.mp4',
+      'videos/grok-video-bc9a7ef6-f226-4a5f-8762-54028e494afc.mp4',
+      'videos/grok-video-520d7680-1f2b-477c-b956-9a36f12c05cc.mp4',
+      'videos/grok-video-bbd24057-d86e-4aed-bc95-ac9d2518346a.mp4',
+      'videos/grok-video-523b87cc-1d51-40d2-b03f-1946aa2eeebb-0.mp4',
+      'videos/grok-video-b1f58759-6326-4133-acdd-061e1724ce53.mp4',
+      'videos/grok-video-734ab46b-f28c-490b-bda1-57ee51af2250.mp4',
+      'videos/grok-video-1945508d-2688-469b-af83-432f1e8ee475.mp4',
+      'videos/grok-video-13029e5d-ea67-47d5-b56e-501c8f7e76e3.mp4',
     ];
 
     const gallery = document.getElementById('gallery');
