--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
       'videos/grok-video-ca09515c-2641-4b17-999f-c7e8c0f4cce8.mp4',
       'videos/grok-video-d743a6ad-1f23-4dde-9fed-a915392b09c2.mp4',
       'videos/grok-video-337da21a-152a-4292-a16b-26e7175bc155.mp4',
+      'videos/grok-video-88c58cb7-de16-4ac3-91d8-5198e11e2f4e.mp4',
       'videos/grok-video-8e9bd627-7797-4321-8c8d-ed1430914230.mp4',
       'videos/grok-video-b9c613e8-6a18-4b6d-853d-a9d82935f73e.mp4',
       'videos/grok-video-d3e75c66-46f5-4475-b569-cc97477f1670.mp4',
