--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
       'videos/grok-video-d743a6ad-1f23-4dde-9fed-a915392b09c2.mp4',
       'videos/grok-video-337da21a-152a-4292-a16b-26e7175bc155.mp4',
       'videos/grok-video-88c58cb7-de16-4ac3-91d8-5198e11e2f4e.mp4',
+      'videos/grok-video-8e72aae3-f2f1-4e5b-93d8-8ba3c3ecf9a7.mp4',
+      'videos/grok-video-ff71f252-051e-4877-b303-c7c8bfd007cf.mp4',
+      'videos/grok-video-3c90d147-7961-4289-a84c-39d10d7c8773.mp4',
+      'videos/grok-video-9c2d2ad5-0a25-40c0-8126-d5ecded1b74c.mp4',
+      'videos/grok-video-e23d6513-4254-48aa-a5b0-1c33affe38ca.mp4',
+      'videos/grok-video-ed478be3-bcf3-4baa-9cad-dbe52a0f9aa1.mp4',
+      'videos/grok-video-c579279b-a5cc-44ed-9fe2-74539e876ec0.mp4',
+      'videos/grok-video-88c58cb7-de16-4ac3-91d8-5198e11e2f4e.mp4',
       'videos/grok-video-8e9bd627-7797-4321-8c8d-ed1430914230.mp4',
       'videos/grok-video-b9c613e8-6a18-4b6d-853d-a9d82935f73e.mp4',
       'videos/grok-video-d3e75c66-46f5-4475-b569-cc97477f1670.mp4',
