--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
       'videos/grok-video-88c58cb7-de16-4ac3-91d8-5198e11e2f4e.mp4',
       'videos/grok-video-8e72aae3-f2f1-4e5b-93d8-8ba3c3ecf9a7.mp4',
       'videos/grok-video-ff71f252-051e-4877-b303-c7c8bfd007cf.mp4',
+      'videos/grok-video-3be23500-1265-43d9-9223-e9a35b2263dd.mp4',
       'videos/grok-video-3c90d147-7961-4289-a84c-39d10d7c8773.mp4',
       'videos/grok-video-9c2d2ad5-0a25-40c0-8126-d5ecded1b74c.mp4',
       'videos/grok-video-e23d6513-4254-48aa-a5b0-1c33affe38ca.mp4',
