--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     .video-card video {
       width:100%;
       aspect-ratio: 9/16;
-      object-fit:cover;
+      object-fit:contain;
       display:block;
       background:#111;
     }
@@ -129,7 +129,6 @@
       'videos/grok-video-ca09515c-2641-4b17-999f-c7e8c0f4cce8.mp4',
       'videos/grok-video-d743a6ad-1f23-4dde-9fed-a915392b09c2.mp4',
       'videos/grok-video-337da21a-152a-4292-a16b-26e7175bc155.mp4',
-      'videos/grok-video-88c58cb7-de16-4ac3-91d8-5198e11e2f4e.mp4',
       'videos/grok-video-8e72aae3-f2f1-4e5b-93d8-8ba3c3ecf9a7.mp4',
       'videos/grok-video-ff71f252-051e-4877-b303-c7c8bfd007cf.mp4',
       'videos/grok-video-3be23500-1265-43d9-9223-e9a35b2263dd.mp4',
