--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       max-width:1400px;
       margin:0 auto;
       transition:grid-template-columns 0.3s ease;
+      align-items:start;
     }
     .video-card {
       border-radius:12px;
