--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       display:grid;
       grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));
       gap:1rem;
+      row-gap:0.5rem;
       padding:1rem;
       max-width:1400px;
       margin:0 auto;
