--- a/index.html
+++ b/index.html
@@ -65,20 +65,15 @@
       font-weight:bold;
       min-width:45px;
     }
-
-    /* UPDATED GALLERY – using CSS vars for dynamic width + gap */
     .gallery {
-      --cell-min: 280px;
-      --gap: 16px;
       display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(var(--cell-min), 1fr));
-      gap:var(--gap);
-      padding:var(--gap);
+      grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));
+      gap:1rem;
+      padding:1rem;
       max-width:1400px;
       margin:0 auto;
       transition:grid-template-columns 0.3s ease;
     }
-
     .video-card {
       border-radius:12px;
       overflow:hidden;
@@ -88,7 +83,7 @@
     .video-card video {
       width:100%;
       aspect-ratio: 9/16;
-      object-fit:contain;
+      object-fit:cover;
       display:block;
       background:#111;
     }
@@ -172,16 +167,12 @@
     const sizeSlider = document.getElementById('sizeSlider');
     const sizeValue = document.getElementById('sizeValue');
 
-    // UPDATED SLIDER: updates CSS vars so side + vertical spacing always match
+    // Update video sizes by changing grid column width
     sizeSlider.addEventListener('input', (e) => {
-      const pct = Number(e.target.value);
-      sizeValue.textContent = pct + '%';
-
-      const minSize = Math.floor(280 * (pct / 100));
-      const gap = Math.max(8, Math.min(28, Math.round(minSize * 0.04)));
-
-      gallery.style.setProperty('--cell-min', `${minSize}px`);
-      gallery.style.setProperty('--gap', `${gap}px`);
+      const size = e.target.value;
+      const minSize = Math.floor(280 * (size / 100));
+      sizeValue.textContent = size + '%';
+      gallery.style.gridTemplateColumns = `repeat(auto-fit, minmax(${minSize}px, 1fr))`;
     });
 
     videos.forEach((src, index) => {
