--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
   <div class="header">
     <h1>Create with a blank slate.</h1>
+    <h2>(Wall of tiny dopamine machines)</h2>
     <div class="controls">
       <label for="sizeSlider">Video Size:</label>
       <input type="range" id="sizeSlider" min="30" max="100" value="100" step="5">
