--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       'videos/grok-video-ab7c5b6f-2755-403f-a38e-348f0826aeb7.mp4',
       'videos/grok-video-8d0a6b79-d7f4-47d8-bcbd-ef2a80550bd6.mp4',
       'videos/grok-video-ca09515c-2641-4b17-999f-c7e8c0f4cce8.mp4',
+      'videos/grok-video-3de857e8-eabf-4315-93d7-6500f8df4a84.mp4',
       'videos/grok-video-d743a6ad-1f23-4dde-9fed-a915392b09c2.mp4',
       'videos/grok-video-337da21a-152a-4292-a16b-26e7175bc155.mp4',
       'videos/grok-video-8e72aae3-f2f1-4e5b-93d8-8ba3c3ecf9a7.mp4',
@@ -138,6 +139,7 @@
       'videos/grok-video-e23d6513-4254-48aa-a5b0-1c33affe38ca.mp4',
       'videos/grok-video-ed478be3-bcf3-4baa-9cad-dbe52a0f9aa1.mp4',
       'videos/grok-video-c579279b-a5cc-44ed-9fe2-74539e876ec0.mp4',
+      'videos/grok-video-0ae3c481-6636-4fc5-84c0-4406fee3acf4.mp4',
       'videos/grok-video-88c58cb7-de16-4ac3-91d8-5198e11e2f4e.mp4',
       'videos/grok-video-8e9bd627-7797-4321-8c8d-ed1430914230.mp4',
       'videos/grok-video-b9c613e8-6a18-4b6d-853d-a9d82935f73e.mp4',
