--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
 <body>
 
   <div class="header">
-    <h1>Create with a blank slate.</h1>
-    <h2>(Wall of tiny dopamine machines)</h2>
+    <h1>Blank Slate Imagining.</h1>
     <div class="controls">
       <label for="sizeSlider">Video Size:</label>
       <input type="range" id="sizeSlider" min="30" max="100" value="100" step="5">
