--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
 
   <script>
     const videos = [
+      'videos/grok-video-c5ef62d9-9d35-40e5-8fd5-3cb49650e68c.mp4',
+      'videos/grok-video-32261533-79fd-45d1-8982-c13ca6ec7ec2.mp4',
+      'videos/grok-video-cb28b118-4d20-460f-8535-c8f85a6c0063.mp4',
+      'videos/grok-video-2dc33533-f887-4b62-871b-ea1da2cfd306.mp4',
+      'videos/grok-video-3da7559a-8f57-4bf7-b430-3fb14b6ed205.mp4',
+      'videos/grok-video-78de01e8-249c-4aea-9495-958f7744ad29.mp4',
+      'videos/grok-video-ddfa4530-feb3-45b6-a23d-9b6dd24b8dcb.mp4',
+      'videos/grok-video-665c7a51-fbd6-4fda-a799-ffb605c92676.mp4',
       'videos/grok-video-fa22a5af-cdcf-4c31-8b56-3bc8cc3bf43d.mp4',
       'videos/grok-video-4e398da6-c4be-4aba-b028-c391a5b08990.mp4',
       'videos/grok-video-d34887ea-b3ec-473b-a6c3-eebc1d9349c1.mp4',
