--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       'videos/grok-video-3da7559a-8f57-4bf7-b430-3fb14b6ed205.mp4',
       'videos/grok-video-78de01e8-249c-4aea-9495-958f7744ad29.mp4',
       'videos/grok-video-ddfa4530-feb3-45b6-a23d-9b6dd24b8dcb.mp4',
+      'videos/grok-video-8c428203-18b4-4368-b79f-2f9aea409646.mp4',
       'videos/grok-video-665c7a51-fbd6-4fda-a799-ffb605c92676.mp4',
       'videos/grok-video-fa22a5af-cdcf-4c31-8b56-3bc8cc3bf43d.mp4',
       'videos/grok-video-4e398da6-c4be-4aba-b028-c391a5b08990.mp4',
