--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
     .gallery {
       display:grid;
       grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));
-      gap:1rem;
+      column-gap:1rem;
+      row-gap:1rem;
       padding:1rem;
       max-width:1400px;
       margin:0 auto;
-      transition:grid-template-columns 0.3s ease;
+      transition:grid-template-columns 0.3s ease, row-gap 0.3s ease;
     }
     .video-card {
       border-radius:12px;
@@ -160,8 +161,10 @@
     sizeSlider.addEventListener('input', (e) => {
       const size = e.target.value;
       const minSize = Math.floor(280 * (size / 100));
+      const rowGap = Math.floor(16 * (size / 100)); // Scale row gap proportionally
       sizeValue.textContent = size + '%';
       gallery.style.gridTemplateColumns = `repeat(auto-fit, minmax(${minSize}px, 1fr))`;
+      gallery.style.rowGap = `${rowGap}px`;
     });
 
     // Intersection Observer for lazy loading
