Add new video file to the video list

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
       'videos/grok-video-7eddbd81-41ca-48c3-bac8-06cc8769bb0d.mp4',
       'videos/grok-video-0ae3c481-6636-4fc5-84c0-4406fee3acf4.mp4',
       'videos/grok-video-3c90d147-7961-4289-a84c-39d10d7c8773.mp4',
+      'videos/grok_video_2025-11-13-11-36-14.mp4',
       'videos/grok-video-78de01e8-249c-4aea-9495-958f7744ad29.mp4',
       'videos/grok-video-d36cc436-cb83-43e5-8905-cec31d90362c.mp4',
       'videos/grok-video-fa22a5af-cdcf-4c31-8b56-3bc8cc3bf43d.mp4',
